unpackaged/main/default/objects/Account/fields/AccountAccount__c.field-meta.xml
<CustomField>
    <fullName>AccountAccount__c</fullName>
    <label>AccountAccount</label>
    <length>33</length>
    <type>Text</type>
</CustomField>