unpackaged/main/default/objects/Account/fields/ContactAccount__c.field-meta.xml
<CustomField>
    <fullName>ContactAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactAccount</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>