unpackaged/main/default/objects/Account/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <label>Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>mon</fullName>
            </value>
            <value>
                <fullName>tue</fullName>
            </value>
            <value>
                <fullName>wed</fullName>
            </value>
            <value>
                <fullName>thur</fullName>
            </value>
            <value>
                <fullName>fri</fullName>
            </value>
            <value>
                <fullName>sat</fullName>
            </value>
            <value>
                <fullName>sun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>