unpackaged/main/default/objects/Account/fields/TotalNumberOfContact__c.field-meta.xml
<CustomField>
    <fullName>TotalNumberOfContact__c</fullName>
    <label>TotalNumberOfContact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>