unpackaged/main/default/objects/Account/recordTypes/NewRecordType.recordType-meta.xml
<RecordType>
    <fullName>NewRecordType</fullName>
    <active>true</active>
    <label>NewRecordType</label>
</RecordType>